# cppsoa

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: activity.json5  hello.json5  lid_stats.json5
src/cppsoa/: cli.py
src/cppsoa/templates/: __init__.py  arrow.jinja  iterator.jinja  vector.jinja
test/: CMakeLists.txt  conanfile.py
test/idl/: activity.json5
test/include/: activity_data.hpp
test/scripts/: pb-dev.sh
test/src/: test_activity.cpp
